# FO4BodySlidePresetsToBodyGen

./: .gitignore  .gitmodules  biome.json  drizzle.config.ts  forge.config.ts  maker-zip.custom.ts  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.ts  webpack.rules.ts
.github/workflows/: main.yml
FormIDs/NPCs/: DLCCoast.esm.csv  DLCNukaWorld.esm.csv  DLCRobot.esm.csv  DLCworkshop01.esm.csv  Fallout4.esm.csv  LondonWorldSpace.esm.csv
FormIDs/Races/: Races.csv
bsrender/: CMakeLists.txt
bsrender/src/: main.cpp
drizzle/: 0000_slow_elektra.sql  0001_thick_mephistopheles.sql  0002_mighty_grim_reaper.sql  0003_watery_scorpion.sql  0004_old_retro_girl.sql  0005_flat_eddie_brock.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
src/: App.tsx  application.ts  consts.ts  index.html  index.ts  logger.ts  preload.ts  renderer.ts  types.ts  utils.ts
src/Components/: AppShell.tsx  BodySlidePresets.tsx  Collapsable.tsx  ConfigProvider.tsx  Converter.tsx  DataProvider.tsx  ESMs.tsx  Formatter.tsx  OverlayProvider.tsx  Settings.tsx  SharedStateProvider.tsx  Sidebar.tsx  Sliders.tsx
src/Components/3D/: BodyMesh.tsx  BodyView.tsx  ThreeView.tsx  View.tsx  ViewHost.tsx
src/Components/BodySlidePresets/: BodySlideModelPreview.tsx  (+4 more)
src/NIF/: .gitignore  nifImporter.ts
src/TRI/: TriReader.ts  triReader.ts
src/db/: index.ts  schema.ts
(+20 files in other folders)
